<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nelson.petagram.ConfigurarCuenta">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvTituloConfigurarCuenta"
            android:text="@string/titulo_configurar_cuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/tamano_titulo_contactos"
            android:theme="@style/AppThemeBack" />


        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etCuentaUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_usuario_configurar_cuenta"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btnGuardarCuenta"
            android:layout_marginTop="60dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/boton_configurar_cuenta_guardar"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
